[package]
name = "mccraft_importer"
version = "0.1.0"
authors = ["bobtwinkles <srkoser+github@gmail.com>"]

[dependencies]
diesel = "1.3"
dotenv = "0.10" 
env_logger = "0.5"
fxhash = "0.2"
log = "0.4"
mccraft_core = { path = "../mccraft_core" }
serde = "1.0"
serde_json = "1.0"
string-interner = "0.7"