[package]
name = "mccraft_web_server"
version = "0.1.0"
authors = ["bobtwinkles <srkoser+GitHub@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
dotenv = "0.10"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
fxhash = "0.2"
log = "0.4"
mccraft_core = { path = "../mccraft_core" }

[dependencies.diesel]
version = "1.3"
features = ["postgres", "r2d2"]